# pastelink

./: .gitignore  README.md  openapi.json
backend_golang/: linkr.go
backend_python_django/: make_style.py  manage.py
backend_python_django/linker/: admin.py  apps.py  models.py  urls.py  views.py
backend_python_django/linker/migrations/: 0001_initial.py  0002_auto_20201122_0341.py
backend_python_django/linker/templates/linker/: about.html  base.html  error.html  index.html  link_list.html  login.html
backend_python_django/linker/templates/linker/partials/: footer.html  navbar.html
backend_python_django/linkr/: asgi.py  settings.py  urls.py  wsgi.py
backend_rust/: Cargo.toml  Rocket.toml
backend_rust/migrations/2020-11-29-123726_create_links/: down.sql  up.sql
backend_rust/src/: main.rs  schema.rs
frontend_vanilla/: index.html
